--- a/client/public/index.css
+++ b/client/public/index.css
@@ -3,8 +3,46 @@ html, body, #app {
   flex-direction: column;
   align-items: center;
   justify-content: center;
+
+  width: 100vw;
 }
 
 div {
   border: 1px solid black;
+}
+
+
+/* .module_cointainer is only temporary. Feel free to mod yours as you see fit. */
+
+
+.module_container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+
+  width: 95vw;
+  height: 500px;
+}
+
+
+
+/* *** PRODUCT OVERVIEW *** */
+
+.module_container_po {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+
+  width: 95vw;
+  height: 500px;
+}
+
+#product_overview_main {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: 500px;
 }
