--- a/client/public/index.css
+++ b/client/public/index.css
@@ -1,10 +1,10 @@
-html, body, #app {
+html, body, #app, #index {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
 
-  width: 98vw;
+  width: 100%;
 }
 
 div {
@@ -21,11 +21,9 @@ div {
   align-items: center;
   justify-content: center;
 
-  width: 95vw;
+  width: 100%;
   height: 500px;
 }
-
-
 
 /* *** PRODUCT OVERVIEW *** */
 
@@ -35,7 +33,7 @@ div {
   align-items: center;
   justify-content: center;
 
-  width: 95vw;
+  width: 100%;
   height: 500px;
 }
 
@@ -45,4 +43,13 @@ div {
   justify-content: center;
   width: 100%;
   height: 500px;
+}
+
+/* *** RELATED *** */
+
+.related_submodule {
+  display: flex;
+  flex-direction: row;
+  width: 100%;
+  height: 50%;
 }
