--- a/client/public/index.css
+++ b/client/public/index.css
@@ -4,6 +4,8 @@ html, body, #app, #index {
   align-items: center;
   justify-content: center;
 
+  margin: 0;
+  padding: 0;
   width: 100%;
 }
 
@@ -39,7 +41,25 @@ div {
 
 .related_submodule {
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
+  align-items: center;
+
+  margin: 0;
   width: 100%;
   height: 50%;
+}
+
+.prod_card_container {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-around;
+  border: none;
+  width: 100%;
+  height: 60%;
+}
+
+.prod-card {
+  width: 20%;
+  height: 100%;
 }
