--- a/client/public/index.css
+++ b/client/public/index.css
@@ -63,3 +63,76 @@ div {
   width: 20%;
   height: 100%;
 }
+
+/* *** QUESTIONS/ANSWER *** */
+
+/* *** RATINGS/REVIEWS *** */
+
+.reviews {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: 400px;
+  margin-top: 0px;
+  border: none;
+}
+
+.reviews_container {
+  display: flex;
+  flex-direction:column;
+  align-items: center;
+  width: 100%;
+  height: 100%;
+}
+
+.ratings_container {
+  display: flex;
+  flex-direction:column;
+  align-items: center;
+  width: 50%;
+  height: 100%;
+}
+
+.entry_container {
+  width: 70%;
+  height: 40%;
+}
+.reviewButtons {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  border: none;
+}
+
+.overall {
+  height: 30%;
+  width: 80%
+}
+
+.starBreakdown {
+  height: 30%;
+  width: 80%
+}
+
+.productBreakdown {
+  height: 30%;
+  width: 80%
+}
+
+.star {
+  border: none;
+}
+
+.numReviews {
+  border: none;
+  margin: 10px;
+}
+
+.reviewsTitle {
+  float: left;
+  border: none;
+  margin-top: 25px;
+}
+
