--- a/client/public/index.css
+++ b/client/public/index.css
@@ -4,9 +4,9 @@ html, body, #app, #index {
   align-items: center;
   justify-content: center;
 
-  margin: 0;
+  margin: -1px;  /* this is to remove scrollbar at the bottom of the page. */
   padding: 0;
-  width: 100%;
+  width: 99.9%;
 }
 
 div {
@@ -34,8 +34,104 @@ div {
   align-items: center;
   justify-content: center;
   width: 100%;
-  height: 500px;
+  height: 700px;
 }
+
+.top01 {
+  display: flex;
+  width: 100%;
+  height: 70%;
+}
+
+.left02 {
+  display: flex;
+  width: 60%;
+  /* height: 100%; */
+  background-color: #ddd;
+}
+
+.thumbnails_po {
+  display: flex;
+  flex-direction: column;
+  width: 10%;
+}
+
+.thumbnail_po {
+  width: 50px;
+  height: 50px;
+  margin: 5px 5px;
+}
+.arrow_po {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  width: 5%;
+}
+
+.arrow_space_po {
+  display: flex;
+  flex-direction: column;
+  /* align-content: center; */
+  align-items: center;
+  height: 40%;
+  width: 100%;
+}
+
+.fullscreen_po {
+  margin: 5px 0px;
+  width: 20px;
+  height: 20px;
+}
+
+.space01_po {
+  width: 80%;
+}
+
+.right02 {
+  display: flex;
+  flex-direction: column;
+  /* justify-content: space-between; */
+  /* align-items: flex-end; */
+  width: 40%;
+  /* height: 100%; */
+}
+
+.stars_po {
+  height: 10%;
+}
+
+.name_block_po {
+  height: 30%;
+}
+
+.style_po {
+  height: 30%;
+}
+
+.add_to_bag_po {
+  height: 30%;
+}
+
+.bottom01 {
+  display: flex;
+  width: 100%;
+  height: 30%;
+}
+
+.product_desc_po{
+  display: flex;
+  width: 60%;
+
+}
+
+.highlights_po {
+  display: flex;
+  width: 40%;
+
+}
+
+
 
 /* *** RELATED *** */
 
