--- a/client/public/index.css
+++ b/client/public/index.css
@@ -96,9 +96,11 @@ div {
 }
 
 .entry_container {
-  width: 70%;
-  height: 40%;
+  width: 80%;
+  height: 60%;
+  overflow-y: scroll;
 }
+
 .reviewButtons {
   display: flex;
   flex-direction: row;
