--- a/client/public/index.css
+++ b/client/public/index.css
@@ -1,10 +1,12 @@
-html, body, #app {
+html, body, #app, #index {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
 
-  width: 98vw;
+  margin: -1px;  /* this is to remove scrollbar at the bottom of the page. */
+  padding: 0;
+  width: 99.9%;
 }
 
 div {
@@ -21,28 +23,238 @@ div {
   align-items: center;
   justify-content: center;
 
-  width: 95vw;
+  width: 100%;
   height: 500px;
+}
+
+
+
+/* *** TEMP TOP BANNER *** */
+
+#top_banner {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100%;
+}
+#top_bar {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  height: 60px;
+  width: 100%;
+  color: white;
+  background-color: #555555;
+}
+
+#announcements {
+  margin: 5px;
 }
 
 
 
 /* *** PRODUCT OVERVIEW *** */
 
-.module_container_po {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-
-  width: 95vw;
-  height: 500px;
-}
-
 #product_overview_main {
   display: flex;
   align-items: center;
   justify-content: center;
   width: 100%;
-  height: 500px;
+  height: 700px;
 }
+
+.top01 {
+  display: flex;
+  width: 100%;
+  height: 70%;
+}
+
+.left02 {
+  display: flex;
+  width: 60%;
+  /* height: 100%; */
+  background-color: #ddd;
+}
+
+.thumbnails_po {
+  display: flex;
+  flex-direction: column;
+  width: 10%;
+}
+
+.thumbnail_po {
+  width: 50px;
+  height: 50px;
+  margin: 5px 5px;
+}
+.arrow_po {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  width: 5%;
+}
+
+.arrow_space_po {
+  display: flex;
+  flex-direction: column;
+  /* align-content: center; */
+  align-items: center;
+  height: 40%;
+  width: 100%;
+}
+
+.fullscreen_po {
+  margin: 5px 0px;
+  width: 20px;
+  height: 20px;
+}
+
+.space01_po {
+  width: 80%;
+}
+
+.right02 {
+  display: flex;
+  flex-direction: column;
+  /* justify-content: space-between; */
+  /* align-items: flex-end; */
+  width: 40%;
+  /* height: 100%; */
+}
+
+.stars_po {
+  height: 10%;
+}
+
+.name_block_po {
+  height: 30%;
+}
+
+.style_po {
+  height: 30%;
+}
+
+.add_to_bag_po {
+  height: 30%;
+}
+
+.bottom01 {
+  display: flex;
+  width: 100%;
+  height: 30%;
+}
+
+.product_desc_po{
+  display: flex;
+  width: 60%;
+
+}
+
+.highlights_po {
+  display: flex;
+  width: 40%;
+
+}
+
+
+
+/* *** RELATED *** */
+
+.related_submodule {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
+  margin: 0;
+  width: 100%;
+  height: 50%;
+}
+
+.prod_card_container {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-around;
+  border: none;
+  width: 100%;
+  height: 60%;
+}
+
+.prod-card {
+  width: 20%;
+  height: 100%;
+}
+
+/* *** QUESTIONS/ANSWER *** */
+
+/* *** RATINGS/REVIEWS *** */
+
+.reviews {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: 400px;
+  margin-top: 0px;
+  border: none;
+}
+
+.reviews_container {
+  display: flex;
+  flex-direction:column;
+  align-items: center;
+  width: 100%;
+  height: 100%;
+}
+
+.ratings_container {
+  display: flex;
+  flex-direction:column;
+  align-items: center;
+  width: 50%;
+  height: 100%;
+}
+
+.entry_container {
+  width: 70%;
+  height: 40%;
+}
+.reviewButtons {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  border: none;
+}
+
+.overall {
+  height: 30%;
+  width: 80%
+}
+
+.starBreakdown {
+  height: 30%;
+  width: 80%
+}
+
+.productBreakdown {
+  height: 30%;
+  width: 80%
+}
+
+.star {
+  border: none;
+}
+
+.numReviews {
+  border: none;
+  margin: 10px;
+}
+
+.reviewsTitle {
+  float: left;
+  border: none;
+  margin-top: 25px;
+}
+
