Displaying Question and Answers. Need to sort answers.

--- a/client/public/index.css
+++ b/client/public/index.css
@@ -188,6 +188,17 @@ div {
 
 /* *** QUESTIONS/ANSWER *** */
 
+.questionsAndAnswers {
+  width: 100%;
+}
+
+/* .singleAnswer {
+  list-style: none;
+} */
+
+
+
+
 /* *** RATINGS/REVIEWS *** */
 
 .reviews {
