--- a/client/public/index.css
+++ b/client/public/index.css
@@ -186,6 +186,7 @@ button {
 .prod-card {
   display: flex;
   flex-direction: column;
+  align-items: center;
   width: 20%;
   height: 100%;
 }
@@ -195,6 +196,11 @@ button {
   height: 30px;
   position: absolute;
   align-self: flex-end;
+}
+
+.product-card-img {
+  width: 100%;
+  object-fit: none;
 }
 
 /* *** QUESTIONS/ANSWER *** */
