--- a/client/public/index.css
+++ b/client/public/index.css
@@ -198,9 +198,19 @@ button {
   align-self: flex-end;
 }
 
-.product-card-img {
+.prod-card-img {
   width: 100%;
   object-fit: none;
+}
+
+.prod-comparison-container {
+  position: absolute;
+}
+
+.prod-comparison-wrapper {
+  position: absolute;
+  /* top: -300px;
+  left: 40px; */
 }
 
 /* *** QUESTIONS/ANSWER *** */
