--- a/client/public/index.css
+++ b/client/public/index.css
@@ -220,8 +220,56 @@ button {
 
 .questionsAndAnswers {
   width: 100%;
+  border: none;
 }
 
+.questionButton {
+  display: flex;
+  flex: auto;
+}
+
+.questionList {
+  width: 100%;
+  height: 400px;
+  overflow-y: scroll;
+  border: none;
+}
+
+.questionEntry {
+  font-weight: bold;
+  font-size: 20px;
+  border: none;
+}
+
+.answer {
+  display: flex;
+  width: 100%;
+  /* flex-direction: row; */
+  font-weight: bold;
+  font-size: 20px;
+  border: none;
+}
+
+.answerEntry {
+  margin-left: 3px;
+  width: 95%;
+  font-weight: normal;
+  font-size: 18px;
+  border: none;
+}
+
+.singleAnswer {
+  margin-left: 3px;
+  width: 95%;
+  font-weight: normal;
+  font-size: 18px;
+  border: none;
+}
+
+.expandCollapseAnswers {
+  border: none;
+  font-weight: bold;
+}
 /* .singleAnswer {
   list-style: none;
 } */
