--- a/client/public/index.css
+++ b/client/public/index.css
@@ -364,10 +364,16 @@ progress::-webkit-progress-value {
 
 
 .filter {
+  border: none;
   display: flex;
   flex-direction: row;
 }
 
 .filterMessage {
-  margin-left: 30px;
+  border: none;
+  margin-left: 10px;
+  margin-right: 10px;
+  font-size: 15px;
+  font-style: italic;
+  color: rgb(128, 124, 124);
 }
