--- a/client/public/index.css
+++ b/client/public/index.css
@@ -375,9 +375,11 @@ progress {
   height: 10px;
   width: 75%;
 }
+
 progress::-webkit-progress-bar {
   background-color: rgb(143, 143, 129);
 }
+
 progress::-webkit-progress-value {
   background-color: rgb(0, 0, 0);
 }
@@ -401,12 +403,12 @@ progress::-webkit-progress-value {
   font-family: 'Font Awesome 5 Free';
   font-weight: 200;
 }
+
 .stars-inner::before {
   content: '\f005 \f005 \f005 \f005 \f005';
   font-family: 'Font Awesome 5 Free';
   font-weight: 900;
 }
-
 
 .filter {
   border: none;
@@ -421,4 +423,19 @@ progress::-webkit-progress-value {
   font-size: 15px;
   font-style: italic;
   color: rgb(128, 124, 124);
+}
+
+.star {
+  position: relative;
+}
+
+.hoverMessage {
+  position: absolute;
+  bottom: 15px;
+  visibility: hidden;
+  background-color:lightgray;
+}
+
+.star:hover .hoverMessage {
+  visibility: visible;
 }
