--- a/client/public/index.css
+++ b/client/public/index.css
@@ -29,7 +29,7 @@ button {
   align-items: center;
   justify-content: center;
 
-  width: 80%;
+  width: 70%;
 }
 
 
@@ -166,12 +166,17 @@ button {
 }
 
 /* *** RELATED *** */
-#related_main h1{
-  align-self: flex-start;
-  border-style: none;
+#related-main div{
+  border: none;
 }
 
-.related_submodule {
+#related-main h3{
+  align-self: flex-start;
+  border-style: none;
+  color: rgb(125, 125, 125);
+}
+
+.related-submodule {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -180,7 +185,7 @@ button {
   width: 100%;
 }
 
-.prod_card_container {
+.prod-card-container {
   display: flex;
   flex-direction: row;
   align-items: center;
@@ -200,6 +205,9 @@ button {
 
 .prod-card-wrapper {
   width: 100%;
+}
+
+.prod-card-wrapper a {
   color: black;
   text-decoration: none;
 }
@@ -207,6 +215,11 @@ button {
 .prod-card-info {
   width: 100%;
   border: none;
+}
+
+.sale {
+  color: red;
+  text-decoration: line-through;
 }
 
 .prod-card-img-wrapper {
@@ -226,6 +239,7 @@ button {
 
 .prod-card-no-img {
   text-align: center;
+  color: white;
 }
 
 .action-button-wrapper {
@@ -245,6 +259,14 @@ button {
   color: orange;
   border-style: none;
   cursor: pointer;
+}
+
+.lbutton-container {
+  align-self: center;
+}
+
+.rbutton-container {
+  align-self: center;
 }
 
 .prod-comparison-container {
