--- a/client/public/index.css
+++ b/client/public/index.css
@@ -303,9 +303,16 @@ button {
 }
 
 .questionEntry {
+  display: flex;
+  flex: auto;
   font-weight: bold;
   font-size: 20px;
   border: none;
+}
+
+.questionHelpful {
+  display: flex;
+  flex: auto;
 }
 
 .answer {
@@ -337,6 +344,41 @@ button {
   border: none;
   font-weight: bold;
   margin-left: 28px;
+}
+
+.modal {
+  position: fixed;
+  left: 0;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  background-color:rgba(0, 0, 0, 0.5);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.modal-content {
+  width: 500px;
+  background-color: white;
+}
+
+.modal-header {
+  padding: 10px;
+}
+
+.modal-footer {
+  padding: 10px;
+}
+
+.modal-title {
+  margin: 0;
+}
+
+.modal-body {
+  padding: 10px;
+  border-top: 1px solid white;
+  border-bottom: 1px solid white;
 }
 
 
