--- a/client/public/index.css
+++ b/client/public/index.css
@@ -80,12 +80,12 @@ button {
 
 
 /* .image_gallery_po { */
-#image_gallery_po {
+.image_gallery_po {
   display: flex;
   width: 60%;
   /* height: 100%; */
-  background-image: url('https://d2cdo4blch85n8.cloudfront.net/wp-content/uploads/2019/07/Hasbro-Full-sized-Replica-Cookie-Monster-image-1.jpg');
-  background-color: #ddd;
+  /* background-image: url('https://d2cdo4blch85n8.cloudfront.net/wp-content/uploads/2019/07/Hasbro-Full-sized-Replica-Cookie-Monster-image-1.jpg'); */
+  background-color: rgb(45, 94, 35);
   background-position: 50% 20%;
 }
 
@@ -97,6 +97,9 @@ button {
 }
 
 .thumbnail_po {
+  background-image: url('https://d2cdo4blch85n8.cloudfront.net/wp-content/uploads/2019/07/Hasbro-Full-sized-Replica-Cookie-Monster-image-1.jpg');
+  background-size: 75px;
+  background-position: 50% 20%;
   width: 50px;
   height: 50px;
   margin: 5px 0px;
@@ -155,6 +158,14 @@ button {
 
 .name_block_po {
   height: 30%;
+}
+
+#name_po {
+  font-family: 'Bungee Shade', cursive;
+  /* font-family: 'Fascinate', cursive; */
+  font-weight: 800;
+  font-size: 40px;
+  margin: 5px;
 }
 
 .style_po {
