--- a/client/public/index.css
+++ b/client/public/index.css
@@ -170,6 +170,14 @@ button {
 }
 
 /* *** RELATED *** */
+
+:root {
+  --prod-card-width: 250px;
+  --prod-card-height: 300px;
+  --add-card-height: 300px;
+  --prod-img-height: 200px;
+}
+
 #related-main div{
   border: none;
 }
@@ -203,8 +211,8 @@ button {
   display: flex;
   flex-direction: column;
   align-items: center;
-  width: 250px;
-  height: 100%;
+  width: var(--prod-card-width);
+  height: var(--prod-card-height);
 }
 
 .prod-card-wrapper {
@@ -228,7 +236,7 @@ button {
 
 .prod-card-img-wrapper {
   width: 100%;
-  height: 300px;
+  height: var(--prod-img-height);
   background: black;
   display: flex;
   justify-content: center;
@@ -263,6 +271,11 @@ button {
   color: orange;
   border-style: none;
   cursor: pointer;
+}
+
+.add-product {
+  width: var(--prod-card-width);
+  height: var(--prod-card-height);
 }
 
 .lbutton-container {
