--- a/client/public/index.css
+++ b/client/public/index.css
@@ -457,7 +457,7 @@ button {
 
 .overall {
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   height: 20%;
   width: 80%;
   color: rgb(77, 63, 63);
@@ -495,8 +495,14 @@ button {
 }
 
 .overallRating {
+  display: flex;
+  flex-direction: row;
   font-size: 40px;
   font-weight: bold;
+}
+
+.starScale {
+  font-size: 15px;
 }
 
 .star {
@@ -547,6 +553,7 @@ progress::-webkit-progress-value {
   font-weight: 900;
 }
 
+
 .filter {
   border: none;
   display: flex;
@@ -583,3 +590,7 @@ progress::-webkit-progress-value {
   visibility: visible;
 }
 
+
+.percentRecommend {
+  font-size: 10px;
+}
