product card minor refactor to pass on the whole product instead of product properties

--- a/client/public/index.css
+++ b/client/public/index.css
@@ -259,7 +259,11 @@ button {
 
 .sale {
   color: red;
+}
+
+.sale span {
   text-decoration: line-through;
+  color: black;
 }
 
 .prod-card-img-wrapper {
