--- a/client/public/index.css
+++ b/client/public/index.css
@@ -409,6 +409,18 @@ button {
   border-bottom: 1px solid white;
 }
 
+textarea {
+  font-family: 'Zen Maru Gothic', sans-serif;
+}
+
+.add-question-body {
+  border: none;
+}
+
+.disclaimer {
+  font-size: 13px;
+  border: none;
+}
 
 
 /* *** RATINGS/REVIEWS *** */
