--- a/client/public/index.css
+++ b/client/public/index.css
@@ -493,8 +493,11 @@ button {
 }
 
 .productBreakdown {
+  display: flex;
+  flex-direction: column;
   height: 40%;
-  width: 80%
+  width: 80%;
+  font-size: 10px;
 }
 
 .star {
@@ -599,4 +602,46 @@ progress::-webkit-progress-value {
   cursor: pointer;
   visibility: visible;
 }
+
+
+.charRatingEntry {
+  border: none;
+}
+.pBreakdownScale {
+  z-index: 1;
+position: relative;
+display: flex;
+flex-direction: row;
+width: 254px;
+margin: 10px 10px 0px 10px;
+}
+
+.innerBar {
+  position: relative;
+  width:80px;
+	height:4px;
+  margin-left: 2px;
+  margin-right: 2px;
+  background-color: lightgray
+}
+
+.indicator {
+  z-index: 2;
+  position: absolute;
+  left: 120px;
+  bottom: 10%;
+}
+
+.ratingMeaning {
+  display: table;
+  width: 100%;
+  table-layout: fixed;    /* For cells of equal size */
+}
+.ratingMeaning section {
+  display: table-cell;
+  text-align: center;
+  font-size: 8px;
+}
+
+
 
