--- a/client/public/index.css
+++ b/client/public/index.css
@@ -15,7 +15,7 @@ html, body, #app, #index {
 }
 
 div {
-  border: 1px solid black;
+  border: 1px solid rgb(199, 199, 199);
 }
 
 button {
@@ -79,7 +79,7 @@ button {
 }
 
 
-/* .image_gallery_po { */
+/** image gallery **/
 .image_gallery_po {
   display: flex;
   width: 60%;
@@ -110,6 +110,7 @@ button {
   flex-direction: column;
   align-items: center;
   justify-content: flex-end;
+  align-content: ;
   width: 50px;
   height: 15px;
   margin: 5px 0px;
@@ -152,10 +153,12 @@ button {
   /* height: 100%; */
 }
 
+/** stars **/
 .stars_po {
   height: 10%;
 }
 
+/** product name **/
 .name_block_po {
   height: 30%;
 }
@@ -168,10 +171,34 @@ button {
   margin: 5px;
 }
 
+/** product style **/
 .style_po {
   height: 30%;
 }
 
+.style_text_po {
+  height: 20px;
+}
+
+.text_po {
+  padding: 0px;
+  margin: 0px
+}
+
+.style_row_thumbnail_po {
+  height: 60px;
+  display: flex;
+  flex-direction: row;
+}
+
+.style_thumbnail_po {
+  height: 40px;
+  width: 40px;
+  border-radius: 20px;
+  margin: 10px
+}
+
+/** add to bag **/
 .add_to_bag_po {
   height: 30%;
 }
