--- a/client/public/index.css
+++ b/client/public/index.css
@@ -203,6 +203,19 @@ button {
   height: 30%;
 }
 
+.add_to_bag_top_po {
+  height: 50%;
+  display: flex;
+  flex-direction: row;
+}
+
+.add_to_bag_bottom_po {
+  height: 50%;
+  display: flex;
+  flex-direction: row;
+}
+
+/** description and features **/
 .bottom01 {
   display: flex;
   width: 100%;
