--- a/client/public/index.css
+++ b/client/public/index.css
@@ -110,7 +110,6 @@ button {
   flex-direction: column;
   align-items: center;
   justify-content: flex-end;
-  align-content: ;
   width: 50px;
   height: 15px;
   margin: 5px 0px;
@@ -207,12 +206,36 @@ button {
   height: 50%;
   display: flex;
   flex-direction: row;
+  align-items: center;
+  justify-content: space-evenly;
+}
+
+.size_select {
+  width: 200px;
+  height: 40px;
+}
+
+.qty_select {
+  width: 75px;
+  height: 40px;
 }
 
 .add_to_bag_bottom_po {
   height: 50%;
   display: flex;
   flex-direction: row;
+  align-items: center;
+  justify-content: space-around;
+}
+
+.add_to_bag_button_po {
+  width: 25%;
+  height: 50%;
+}
+
+.favorites_add_button_po {
+  width: 25%;
+  height: 50%;
 }
 
 /** description and features **/
