Comparison flush out and cleanup of other files to make sure data is flowing dynamically

--- a/client/public/index.css
+++ b/client/public/index.css
@@ -326,6 +326,9 @@ button {
   position: absolute;
   top: -300px;
   left: 40px;
+  z-index: 2;
+
+  background: white;
 }
 
 /* *** QUESTIONS/ANSWER *** */
