--- a/client/public/index.css
+++ b/client/public/index.css
@@ -32,7 +32,7 @@ button {
 
   /* RELATED PRODUCTS */
   --prod-card-width: 200px;
-  --prod-card-height: 310px;
+  --prod-card-height: 300px;
   --prod-card-margins: 0px 10px;
   --prod-img-height: 200px;
   --prod-img-background-color: rgb(180, 180, 180);
@@ -328,26 +328,50 @@ button {
   border: none;
 }
 
-.prod-card-wrapper a {
-  color: black;
-  text-decoration: none;
+.prod-card-wrapper button {
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  background: none;
+  fill: none;
+  border-style: none;
+  cursor: pointer;
+  padding: 0px;
+  margin: 0px;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: space-between;
 }
 
 .prod-card-info-wrapper {
   margin: 5px;
   border: none;
+  text-align: left;
+  font-family: 'Zen Maru Gothic', sans-serif;
 }
 
-.prod-card-info {
-  width: 100%;
+.prod-card-info-wrapper div {
   border: none;
 }
 
-.sale {
-  color: red;
+.prod-card-category {
+  text-transform: uppercase;
+  color: var(--global-border-color)
 }
 
-.sale span {
+.prod-card-name {
+  font-weight: 700;
+  font-size: 18px;
+}
+
+.sale-price {
+  color: red;
+  font-weight: 700;
+}
+
+.sale-price span {
+  margin: 0px 5px;
+  font-weight: 400;
   text-decoration: line-through;
   color: black;
 }
