--- a/client/public/index.css
+++ b/client/public/index.css
@@ -10,8 +10,17 @@ html, body, #app, #index {
   font-family: 'Zen Maru Gothic', sans-serif;
 }
 
+html {
+  scroll-behavior: smooth;
+}
+
 #index {
   width: 1040px;
+}
+
+#outlines {
+  position: sticky;
+  top: 0;
 }
 
 div {
@@ -65,6 +74,7 @@ button {
   align-items: center;
   width: 100%;
 }
+
 #top_bar {
   display: flex;
   align-items: center;
@@ -73,6 +83,10 @@ button {
   width: 100%;
   color: white;
   background-color: #555555;
+}
+
+.top_text {
+  margin: 0px 10px;
 }
 
 #announcements {
@@ -173,13 +187,20 @@ button {
 
 /** stars **/
 .stars_po {
+  display: flex;
+  flex-direction: row;
   height: 10%;
   margin: var(--po-info-margin);
+  align-items: end;
+}
+
+.read_reviews_po {
+  margin: 0px 10px;
 }
 
 /** product name **/
 .name_block_po {
-  height: 30%;
+  height: 25%;
   margin: var(--po-info-margin);
 }
 
@@ -188,7 +209,12 @@ button {
   /* font-family: 'Fascinate', cursive; */
   font-weight: 800;
   font-size: 40px;
-  margin: 5px;
+  margin: 0px;
+}
+
+.price_po {
+  height: 5%;
+  margin: var(--po-info-margin);
 }
 
 /** ** ** ** ** ** ** ** ** ** ** CHANGES HERE ** ** ** ** ** ** ** ** ** ** **/
@@ -208,11 +234,12 @@ button {
 }
 
 .style_row_thumbnail_po {
-  height: 120px;
-  width: 260px;
+  height: 125px;
+  width: 270px;
   display: flex;
   flex-direction: row;
   flex-flow: wrap;
+  overflow: overlay;
 }
 
 .style_thumbnail_po {
