Comparison pop-up positioning fixed

--- a/client/public/index.css
+++ b/client/public/index.css
@@ -1,4 +1,4 @@
-html, body, #app, #index {
+html, body, #app {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -10,7 +10,7 @@ html, body, #app, #index {
   font-family: 'Zen Maru Gothic', sans-serif;
 }
 
-#index {
+#app {
   width: 1040px;
 }
 
@@ -36,7 +36,7 @@ button {
   --prod-card-margins: 0px 10px;
   --prod-img-height: 200px;
   --prod-img-background-color: rgb(180, 180, 180);
-  --comparison-width: 420px;
+  --comparison-width: 500px;
 
    /* PRODUCT OVERVIEW */
   --po-info-margin: 0px 20px;
@@ -317,8 +317,7 @@ button {
   flex-direction: row;
   align-items: flex-start;
   justify-content: flex-start;
-  flex-wrap: nowrap;
-  overflow-x: auto;
+  overflow: auto;
   border: none;
   width: 90%;
 }
@@ -332,6 +331,10 @@ button {
   height: var(--prod-card-height);
   margin: var(--prod-card-margins);
   flex: 0 0 auto;
+}
+
+.prod-card:hover {
+  background: var(--mustard);
 }
 
 .prod-card-wrapper {
@@ -353,6 +356,7 @@ button {
   align-items: flex-start;
   justify-content: space-between;
 }
+
 
 .prod-card-info-wrapper {
   margin: 5px;
@@ -457,22 +461,15 @@ button {
   align-self: center;
 }
 
-.prod-comparison-container {
-  border: 0px;
-  position: absolute;
-  top: 50px;
-  left: -50px;
-}
-
 .prod-comparison-wrapper {
-  position: sticky;
+  position: fixed;
   width: var(--comparison-width);
-  z-index: 2;
+  z-index: 1;
 
-  background-color: #ffffffcd;
+  background-color: rgba(255, 255, 255, 0.804);
   backdrop-filter: blur(5px);
-  -webkit-backdrop-filter: blur(5px);
   text-align: center;
+  pointer-events: none;
 }
 table {
   border-collapse: collapse;
