--- a/client/public/index.css
+++ b/client/public/index.css
@@ -143,11 +143,20 @@ button {
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: flex-end;
+  justify-content: center;
   width: 50px;
   height: 15px;
-  margin: 5px 0px;
+  margin: 0px;
   overflow: hidden;
+}
+
+#arrow_up_po {
+  margin: 20px 0px 5px;
+}
+
+.ri-arrow-up-s-fill, .ri-arrow-down-s-fill {
+  color: white;
+  font-size: 24px;
 }
 
 .arrow_po {
@@ -156,6 +165,11 @@ button {
   justify-content: space-between;
   align-items: center;
   width: 5%;
+}
+
+.ri-arrow-left-s-line, .ri-arrow-right-s-line {
+  color: white;
+  font-size: 36px;
 }
 
 .arrow_space_po {
