Middle of refactoring button behavior

--- a/client/public/index.css
+++ b/client/public/index.css
@@ -328,7 +328,7 @@ button {
 
 /* *** RELATED *** */
 
-#related-main h3{
+#related-main h3 {
   align-self: flex-start;
   border-style: none;
   color: var(--global-border-color);
@@ -357,7 +357,8 @@ button {
   flex-direction: row;
   align-items: flex-start;
   justify-content: flex-start;
-  overflow: scroll;
+  overflow-x: scroll;
+  overflow-y: hidden;
   border: none;
   width: 90%;
 }
@@ -501,6 +502,21 @@ button {
   align-self: center;
 }
 
+.nav-button {
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  background: none;
+  fill: none;
+  border-style: none;
+  cursor: pointer;
+  font-size: 25px;
+}
+/*
+.lbutton-container .nav-button {
+  color: rgb(0, 0, 0, 0);
+} */
+
+
 .prod-comparison-wrapper {
   position: fixed;
   width: var(--comparison-width);
@@ -511,6 +527,7 @@ button {
   text-align: center;
   pointer-events: none;
 }
+
 table {
   border-collapse: collapse;
   width: 100%;
