complete review body display button

--- a/client/public/index.css
+++ b/client/public/index.css
@@ -594,6 +594,7 @@ td {
   display: flex;
   align-items: center;
   justify-content: center;
+  z-index: 1;
 }
 
 .modal-content {
@@ -700,6 +701,17 @@ textarea {
   align-items: center;
   border: none;
 }
+
+.reviewSummary {
+ font-weight: bold;
+}
+
+/* .reviewBody {
+  display:inline-block;
+  white-space: nowrap;
+  overflow: hidden;
+  max-width: 124ch;
+} */
 
 
 .overall {
