--- a/client/public/index.css
+++ b/client/public/index.css
@@ -117,9 +117,7 @@ button {
 .image_gallery_po {
   display: flex;
   width: 60%;
-  /* height: 100%; */
-  /* background-image: url('https://d2cdo4blch85n8.cloudfront.net/wp-content/uploads/2019/07/Hasbro-Full-sized-Replica-Cookie-Monster-image-1.jpg'); */
-  background-color: rgb(45, 94, 35);
+  background-color: white;
   background-position: 50% 20%;
 }
 
