--- a/client/public/index.css
+++ b/client/public/index.css
@@ -523,14 +523,52 @@ td {
 
 /* *** QUESTIONS/ANSWER *** */
 
+.qa-title {
+  width: 100%;
+  margin-left: 0px;
+  font-size: 18px;
+}
+
+.qa-search {
+  width: 100%;
+  margin-left: 0px;
+}
+
+.qa-list {
+  display: flex;
+  width: 100%;
+  margin-left: 0px;
+}
+
+.search {
+  margin-left: 0px;
+  height: 50px;
+  width: 100%;
+}
+
 .questionsAndAnswers {
   width: 100%;
   border: none;
 }
 
-.questionButton {
+.questionButtonContainer {
   display: flex;
-  flex: auto;
+  width: 50%;
+
+}
+
+.questionButton {
+  font-family: 'Zen Maru Gothic', sans-serif;
+  font-size: 18px;
+  font-weight: bold;
+  width: 50%;
+  height: 50px;
+  background-color: white;
+  padding: 0px;
+}
+
+.questionDisplay {
+  width: 100%;
 }
 
 .questionList {
@@ -540,23 +578,69 @@ td {
   border: none;
 }
 
+.singleQuestion {
+  width: 700px;
+}
+
 .questionEntry {
   display: flex;
   flex: auto;
   font-weight: bold;
   font-size: 20px;
   border: none;
+  width: 100%;
+}
+
+.question-meta {
+  display: flex;
+  font-size: 13px;
+  margin-left: 10px;
 }
 
 .questionHelpful {
+  font-family: 'Zen Maru Gothic', sans-serif;
   display: flex;
   flex: auto;
+  border: none;
+  background-color: white;
+  text-align: right;
+  margin-top: 0px;
+  width: 150px;
+}
+
+.addAnswer {
+  font-family: 'Zen Maru Gothic', sans-serif;
+  display: flex;
+  flex: auto;
+  border: none;
+  background-color: white;
+  text-align: left;
+  margin-top: 0px;
+  width: 150px;
+}
+
+.answer-meta-helpful {
+  font-family: 'Zen Maru Gothic', sans-serif;
+  border: none;
+  background-color: white;
+  text-align: left;
+  margin-top: 0px;
+  padding: 0px;
+  width: 110px;
+}
+.answer-meta-report {
+  font-family: 'Zen Maru Gothic', sans-serif;
+  border: none;
+  background-color: white;
+  text-align: left;
+  margin-top: 0px;
+  padding: 0px;
+  width: 50px;
 }
 
 .answer {
   display: flex;
   width: 100%;
-  /* flex-direction: row; */
   font-weight: bold;
   font-size: 20px;
   border: none;
@@ -576,6 +660,15 @@ td {
   font-weight: normal;
   font-size: 18px;
   border: none;
+}
+
+.answer-meta {
+  display: flex;
+  font-size: 13px;
+}
+
+.seller {
+  font-weight: bold;
 }
 
 .expandCollapseAnswers {
@@ -598,11 +691,14 @@ td {
 }
 
 .modal-content {
-  width: 500px;
+  font-size: 15px;
+  width: 700px;
   background-color: white;
 }
 
 .modal-header {
+
+  flex-direction: row;
   padding: 10px;
 }
 
@@ -614,6 +710,22 @@ td {
   margin: 0;
 }
 
+.modal-subtitle {
+  margin: 0;
+}
+
+.close-modal-button {
+  margin-left: 650px;
+  display: flex;
+  background-color: white;
+  font-weight: bolder;
+  text-align: center;
+  justify-content: center;
+  width: 20px;
+  height: 20px;
+  cursor: pointer;
+}
+
 .modal-body {
   padding: 10px;
   border-top: 1px solid white;
@@ -622,6 +734,8 @@ td {
 
 textarea {
   font-family: 'Zen Maru Gothic', sans-serif;
+  resize: none;
+  overflow: auto;
 }
 
 .add-question-body {
