Local storage working for outfitList

--- a/client/public/index.css
+++ b/client/public/index.css
@@ -354,14 +354,14 @@ button {
   flex-direction: row;
   justify-content: space-between;
   border: none;
-  width: inherit;
+  width: 100%;
 }
 
 .prod-cards-container {
   display: flex;
   flex-direction: column;
   border: none;
-  width: inherit;
+  width: 100%;
 }
 
 .prod-cards-wrapper {
