--- a/client/public/index.css
+++ b/client/public/index.css
@@ -180,10 +180,106 @@ button {
   width: 100%;
 }
 
-.fullscreen_po {
+.hover_fullscreen_button_po {
+  height: 20px;
+  width: 20px;
+  background-color: yellow;
+}
+
+/* .fullscreen_button_po {
   margin: 5px 0px;
   width: 20px;
   height: 20px;
+} */
+
+.fullscreen_exp_po {
+  position: fixed;
+  left: 10%;
+  top: 10%;
+  right: 10%;
+  bottom: 10%;
+  background-color: rgba(196, 167, 5, 0.5);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+}
+
+.image_mask_exp_po {
+  width: 500px;
+  height: 500px;
+  overflow: hidden;
+}
+
+/* .main_image_exp_po {
+  display: flex;
+  flex-direction: column-reverse;
+  width: 100%;
+  height: 100%;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+} */
+
+
+.id_main_image {
+  background-image: '';
+  z-index: 4;
+}
+
+
+.main_image_exp_po {
+  width: 100%;
+  height: 100%;
+  position: relative;
+  /* transform-origin: 0 0; */
+  /* display: flex;
+  flex-direction: column-reverse; */
+  /* background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover; */
+}
+
+
+/* .main_image_exp_po:before {
+  z-index: -1;
+  content: '';
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  transform-origin: 0 0; */
+
+
+.bg:before {
+  background: '';
+  /* background-size: cover; */
+}
+
+
+
+.thumbnails_exp_po{
+  position: absolute;
+  z-index: 5;
+  right: 0;
+  bottom: 10%;
+  left: 0;
+  background-color: rgb(0, 0, 0, .5);
+  height: 10%;
+  width:100%;
+}
+
+.txt {
+  position: absolute;
+  z-index: 6;
+  right: 0;
+  bottom: 10%;
+  left: 0;
+  font-size: 9px;
+  line-height: 12px;
+  text-align: center;
+  cursor: default;
 }
 
 .space01_po {
@@ -1004,6 +1100,7 @@ progress::-webkit-progress-value {
   border: none;
   position: relative;
   display: inline-block;
+  z-index: 1;
 }
 
 .stars-inner  {
@@ -1012,18 +1109,21 @@ progress::-webkit-progress-value {
   top: 0;
   left: 0;
   overflow: hidden;
+  z-index: 1;
 }
 
 .stars-outer::before {
   content: '\f005 \f005 \f005 \f005 \f005';
   font-family: 'Font Awesome 5 Free';
   font-weight: 200;
+  z-index: 1;
 }
 
 .stars-inner::before {
   content: '\f005 \f005 \f005 \f005 \f005';
   font-family: 'Font Awesome 5 Free';
   font-weight: 900;
+  z-index: 1;
 }
 
 .filter {
