--- a/client/public/index.css
+++ b/client/public/index.css
@@ -194,66 +194,42 @@ button {
 
 .fullscreen_exp_po {
   position: fixed;
-  left: 10%;
-  top: 10%;
-  right: 10%;
-  bottom: 10%;
+  left: 0%;
+  top: 0%;
+  right: 0%;
+  bottom: 0%;
   background-color: rgba(196, 167, 5, 0.5);
   display: flex;
   align-items: center;
   justify-content: center;
+  z-index: 2;
 
 }
 
 .image_mask_exp_po {
-  width: 500px;
-  height: 500px;
+  width: 700px;
+  height: 700px;
   overflow: hidden;
-}
-
-/* .main_image_exp_po {
-  display: flex;
-  flex-direction: column-reverse;
-  width: 100%;
-  height: 100%;
-  background-repeat: no-repeat;
-  background-position: center;
-  background-size: cover;
-} */
-
-
-.id_main_image {
-  background-image: '';
-  z-index: 4;
+  position: fixed;
+  /* left: 10%;
+  top: 5%;
+  right: 10%;
+  bottom: 5%; */
+  cursor: zoom-in;
+  /* cursor: crosshair; */
 }
 
 
 .main_image_exp_po {
+  background-image: '';
   width: 100%;
   height: 100%;
   position: relative;
   /* transform-origin: 0 0; */
   /* display: flex;
   flex-direction: column-reverse; */
-  /* background-repeat: no-repeat;
+  background-repeat: no-repeat;
   background-position: center;
-  background-size: cover; */
-}
-
-
-/* .main_image_exp_po:before {
-  z-index: -1;
-  content: '';
-  position: absolute;
-  left: 0;
-  top: 0;
-  width: 100%;
-  height: 100%;
-  transform-origin: 0 0; */
-
-
-.bg:before {
-  background: '';
   /* background-size: cover; */
 }
 
@@ -1100,7 +1076,6 @@ progress::-webkit-progress-value {
   border: none;
   position: relative;
   display: inline-block;
-  z-index: 1;
 }
 
 .stars-inner  {
@@ -1109,21 +1084,18 @@ progress::-webkit-progress-value {
   top: 0;
   left: 0;
   overflow: hidden;
-  z-index: 1;
 }
 
 .stars-outer::before {
   content: '\f005 \f005 \f005 \f005 \f005';
   font-family: 'Font Awesome 5 Free';
   font-weight: 200;
-  z-index: 1;
 }
 
 .stars-inner::before {
   content: '\f005 \f005 \f005 \f005 \f005';
   font-family: 'Font Awesome 5 Free';
   font-weight: 900;
-  z-index: 1;
 }
 
 .filter {
@@ -1308,3 +1280,6 @@ p {
 .starRadio {
   opacity: 0;
 }
+
+
+
