--- a/client/public/index.css
+++ b/client/public/index.css
@@ -124,6 +124,7 @@ button {
   flex-direction: column;
   align-items: center;
   width: 14%;
+  background-color: rgba(255, 255, 255, 0.5)
 }
 
 .thumbnail_frame_po {
@@ -200,40 +201,41 @@ button {
   bottom: 0%;
   background-color: rgba(196, 167, 5, 0.5);
   display: flex;
+  flex-direction: row;
   align-items: center;
   justify-content: center;
   z-index: 2;
 
 }
 
-.image_mask_exp_po {
-  width: 700px;
-  height: 700px;
-  overflow: hidden;
-  position: fixed;
-  /* left: 10%;
-  top: 5%;
-  right: 10%;
-  bottom: 5%; */
-  cursor: zoom-in;
-  /* cursor: crosshair; */
-}
-
 
 .main_image_exp_po {
   background-image: '';
-  width: 100%;
+  /* width: 100%;
+  height: 100%; */
   height: 100%;
-  position: relative;
+  /* position: relative; */
   /* transform-origin: 0 0; */
   /* display: flex;
   flex-direction: column-reverse; */
-  background-repeat: no-repeat;
-  background-position: center;
+  /* background-repeat: no-repeat;
+  background-position: center; */
   /* background-size: cover; */
+  cursor: zoom-in;
+  z-index: 4;
 }
 
+.image_side_po {
+  z-index: 3;
+  height: 100%;
+  width: 40%;
+}
 
+.inner_image_exp_po {
+  height: 100%;
+  /* size: inherit; */
+  z-index: 4;
+}
 
 .thumbnails_exp_po{
   position: absolute;
